Update deployment instructions and configuration files

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -1,9 +1,6 @@
+REPO_URL=https://github.com/hackerman70000/apt.git
 HF_TOKEN=your_huggingface_token_here
-
-LANGSMITH_TRACING=false
-
-REPO_URL=https://github.com/YOUR_USERNAME/YOUR_REPO.git
-
-WORKSPACE_DIR=/workspace/apt-rag
-
+WORKSPACE_DIR=/workspace/apt
 EMBEDDING_MODEL=Qwen/Qwen3-Embedding-8B
+PDF_LOADER=pymupdf4llm
+LANGSMITH_TRACING=false
