--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "APT Threat Intelligence RAG System"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.9.0",
     "beautifulsoup4>=4.14.2",
     "chromadb>=1.2.1",
     "langchain-chroma>=1.0.0",
